--- a/android/res/layout/cszbarscanner.xml
+++ b/android/res/layout/cszbarscanner.xml
@@ -77,7 +77,7 @@
             android:background="#76C043"
             android:paddingBottom="15dp"
             android:paddingTop="15dp"
-            android:text="Digitar Manualmente"
+            android:text="Digite o código de barras"
             android:textColor="#FFFFFF"
             android:onClick="onAddManuallyPressed"
             android:textSize="20sp" />
