--- a/android/res/layout/cszbarscanner.xml
+++ b/android/res/layout/cszbarscanner.xml
@@ -53,19 +53,6 @@
             android:gravity="center_vertical"
             android:background="#ff0000" />
 
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="60dp"
-            android:layout_height="70dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:background="@color/csZbarScannerTextBackground"
-            android:longClickable="true"
-            android:onClick="toggleFlash"
-            android:src="@drawable/camera_flash"
-            android:visibility="invisible" />
-
         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
@@ -81,6 +68,19 @@
             android:textColor="#FFFFFF"
             android:onClick="onAddManuallyPressed"
             android:textSize="20sp" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="60dp"
+            android:layout_height="70dp"
+            android:layout_above="@+id/button2"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:background="@color/csZbarScannerTextBackground"
+            android:longClickable="true"
+            android:onClick="onPerUnitButtonPressed"
+            android:src="@drawable/camera_flash"
+            android:visibility="visible" />
 
     </RelativeLayout>
 
